--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-image: url(https://danielsacramanto.github.io/newyear/614cd52b86655.jpg); 
+  background-image: url(https://samisweb.github.io/newyear/background.jpg);
+  background-repeat: no-repeat;
+  background-size: auto;	
 }
 
 canvas {
