--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@ canvas {
 }
 
 .time {
-  color: #00f4ff;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  
+    color: #00f4ff;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    background: rgb(6, 20, 23, 0.4);
+    padding: 20px;
+    border-radius: 12px;
 }
 
 .time span {
