--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   font-family: "Aleo", sans-serif;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  background-image: url(https://samisweb.github.io/newyear/background.jpg);
-  background-repeat: no-repeat;
-  background-size: auto;	
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-image: url(https://samisweb.github.io/newyear/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 canvas {
