--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@ canvas {
 
 <body>
   <div class="middle">
-    <h1 class="label">Days Remaining Until 2023 
+    <h1 class="label">Days Remaining Until <script>
+        let currentYear = new Date().getFullYear();
+        let nextYear = currentYear + 1;
+        document.getElementById("nextYear").textContent = nextYear;
+    </script>
+	    
     </h1>
     <div class="time">
       <span>
